PurpleNumber/src/css/board.css
table.board tbody tr:nth-child(even) td, tbody tr.even td {
	background: #FFFFFF;
}
table.board {
	border-collapse: collapse;
	table-layout: fixed;
}
table.board td {
	overflow: hidden;
	padding: 10px;
}
td.grid {
	border: 1px solid black;
	height: 180px;
	vertical-align: top;
	/**
	 * Turn this on to have minimum width for each grid.
	 * width: 250px;
	 */
}
td.center {
	height: 360px;
}
div.center,
div.stars,
div.palace,
div.grid {
	width: 100%;
}

div.grid {
	position: relative;
	height: 100%;
}

div.palace {
	bottom: 0;
	position: absolute;
	text-align: center;
}

.vertical {
	-webkit-writing-mode: vertical-rl;
}
.small {
	font-size: 1.5em;
	line-height: 1.875em;
}
.regular {
	font-size: 1.8em;
	line-height: 1.4em;
}
.large {
	font-size: 3em;
	line-height: 3.5em;
}
p.name {
	-webkit-writing-mode: vertical-rl;
	font-size: 3em;
	height: 100%;
	text-align: center;
	margin: 0 1em;
}

